decafcomp.output
State 25 conflicts: 2 shift/reduce
State 109 conflicts: 2 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: extern_list decafpackage
    3        | decafpackage

    4 extern_list: externFunc
    5            | extern_list externFunc

    6 externFunc: T_EXTERN T_FUNC T_ID T_LPAREN externTypes T_RPAREN methodType T_SEMICOLON
    7           | T_EXTERN T_FUNC T_ID T_LPAREN T_RPAREN methodType T_SEMICOLON

    8 decafpackage: T_PACKAGE T_ID begin_block fieldDecls methodDecls end_block
    9             | T_PACKAGE T_ID T_LCB T_RCB
   10             | T_PACKAGE T_ID begin_block fieldDecls end_block
   11             | T_PACKAGE T_ID begin_block methodDecls end_block

   12 fieldDecls: fieldDecl
   13           | fieldDecls fieldDecl
   14           | T_VAR ids type T_SEMICOLON
   15           | fieldDecls T_VAR ids type T_SEMICOLON

   16 fieldDecl: T_VAR T_ID type T_SEMICOLON
   17          | T_VAR T_ID arrayType T_SEMICOLON
   18          | T_VAR T_ID type T_ASSIGN constant T_SEMICOLON

   19 methodDecls: methodDecl
   20            | methodDecls methodDecl

   21 methodDecl: T_FUNC T_ID T_LPAREN T_RPAREN methodType mblock
   22           | T_FUNC T_ID T_LPAREN idtypes T_RPAREN methodType mblock

   23 typedSymbols: typedSymbol
   24             | typedSymbols typedSymbol
   25             | T_VAR ids type T_SEMICOLON
   26             | typedSymbols T_VAR ids type T_SEMICOLON

   27 typedSymbol: T_VAR T_ID type T_SEMICOLON

   28 mblock: begin_block end_block
   29       | begin_block typedSymbols statements end_block
   30       | begin_block typedSymbols end_block
   31       | begin_block statements end_block

   32 block: begin_block end_block
   33      | begin_block typedSymbols statements end_block
   34      | begin_block typedSymbols end_block
   35      | begin_block statements end_block

   36 begin_block: T_LCB

   37 end_block: T_RCB

   38 statements: statement
   39           | statements statement

   40 statement: T_RETURN T_SEMICOLON
   41          | T_RETURN T_LPAREN T_RPAREN T_SEMICOLON
   42          | T_RETURN T_LPAREN expr T_RPAREN T_SEMICOLON
   43          | T_BREAK T_SEMICOLON
   44          | T_CONTINUE T_SEMICOLON
   45          | assign T_SEMICOLON
   46          | methodcall T_SEMICOLON
   47          | T_WHILE T_LPAREN expr T_RPAREN block
   48          | T_IF T_LPAREN expr T_RPAREN block T_ELSE block
   49          | T_IF T_LPAREN expr T_RPAREN block
   50          | T_FOR T_LPAREN assigns T_SEMICOLON expr T_SEMICOLON assigns T_RPAREN block
   51          | block

   52 assigns: assign
   53        | assigns assign

   54 assign: T_ID T_ASSIGN expr
   55       | T_ID T_LSB expr T_RSB T_ASSIGN expr

   56 expr: expr T_PLUS expr
   57     | expr T_MINUS expr
   58     | expr T_MULT expr
   59     | expr T_DIV expr
   60     | expr T_LEFTSHIFT expr
   61     | expr T_RIGHTSHIFT expr
   62     | expr T_MOD expr
   63     | expr T_EQ expr
   64     | expr T_GEQ expr
   65     | expr T_LEQ expr
   66     | expr T_NEQ expr
   67     | expr T_LT expr
   68     | expr T_GT expr
   69     | expr T_AND expr
   70     | expr T_OR expr
   71     | T_NOT expr
   72     | T_MINUS expr
   73     | constant
   74     | T_LPAREN expr T_RPAREN
   75     | T_ID T_LSB expr T_RSB
   76     | methodcall
   77     | T_ID

   78 methodcall: T_ID T_LPAREN methodargs T_RPAREN
   79           | T_ID T_LPAREN T_RPAREN

   80 methodargs: methodarg
   81           | methodargs T_COMMA methodarg

   82 methodarg: expr
   83          | T_STRINGCONSTANT

   84 arrayType: T_LSB T_INTCONSTANT T_RSB type

   85 externTypes: externType
   86            | externTypes T_COMMA externType

   87 externType: T_STRINGTYPE
   88           | type

   89 ids: T_ID
   90    | ids T_COMMA T_ID

   91 idtypes: idtype
   92        | idtypes T_COMMA idtype

   93 idtype: T_ID type

   94 methodType: T_VOID
   95           | type

   96 type: T_INTTYPE
   97     | T_BOOLTYPE

   98 constant: T_INTCONSTANT
   99         | T_CHARCONSTANT
  100         | boolConstant

  101 boolConstant: T_TRUE
  102             | T_FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PACKAGE (258) 8 9 10 11
T_FUNC (259) 6 7 21 22
T_RPAREN (260) 6 7 21 22 41 42 47 48 49 50 74 78 79
T_LPAREN (261) 6 7 21 22 41 42 47 48 49 50 74 78 79
T_SEMICOLON (262) 6 7 14 15 16 17 18 25 26 27 40 41 42 43 44 45 46
    50
T_EXTERN (263) 6 7
T_WHILE (264) 47
T_FOR (265) 50
T_IF (266) 48 49
T_ELSE (267) 48
T_LCB (268) 9 36
T_VAR (269) 14 15 16 17 18 25 26 27
T_COMMA (270) 81 86 90 92
T_LSB (271) 55 75 84
T_RSB (272) 55 75 84
T_RCB (273) 9 37
T_ASSIGN (274) 18 54 55
T_ID (275) 6 7 8 9 10 11 16 17 18 21 22 27 54 55 75 77 78 79 89 90
    93
T_BOOLTYPE (276) 97
T_INTTYPE (277) 96
T_STRINGTYPE (278) 87
T_VOID (279) 94
T_MINUS (280) 57 72
T_BREAK (281) 43
T_CONTINUE (282) 44
T_RETURN (283) 40 41 42
T_NOT (284) 71
T_PLUS (285) 56
T_MULT (286) 58
T_DIV (287) 59
T_LEFTSHIFT (288) 60
T_RIGHTSHIFT (289) 61
T_LT (290) 67
T_GT (291) 68
T_MOD (292) 62
T_LEQ (293) 65
T_GEQ (294) 64
T_EQ (295) 63
T_NEQ (296) 66
T_AND (297) 69
T_OR (298) 70
T_STRINGCONSTANT (299) 83
T_FALSE (300) 102
T_TRUE (301) 101
T_INTCONSTANT (302) 84 98
T_CHARCONSTANT (303) 99
UMINUS (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
start (51)
    on left: 1, on right: 0
program (52)
    on left: 2 3, on right: 1
extern_list (53)
    on left: 4 5, on right: 2 5
externFunc (54)
    on left: 6 7, on right: 4 5
decafpackage (55)
    on left: 8 9 10 11, on right: 2 3
fieldDecls (56)
    on left: 12 13 14 15, on right: 8 10 13 15
fieldDecl (57)
    on left: 16 17 18, on right: 12 13
methodDecls (58)
    on left: 19 20, on right: 8 11 20
methodDecl (59)
    on left: 21 22, on right: 19 20
typedSymbols (60)
    on left: 23 24 25 26, on right: 24 26 29 30 33 34
typedSymbol (61)
    on left: 27, on right: 23 24
mblock (62)
    on left: 28 29 30 31, on right: 21 22
block (63)
    on left: 32 33 34 35, on right: 47 48 49 50 51
begin_block (64)
    on left: 36, on right: 8 10 11 28 29 30 31 32 33 34 35
end_block (65)
    on left: 37, on right: 8 10 11 28 29 30 31 32 33 34 35
statements (66)
    on left: 38 39, on right: 29 31 33 35 39
statement (67)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51, on right: 38 39
assigns (68)
    on left: 52 53, on right: 50 53
assign (69)
    on left: 54 55, on right: 45 52 53
expr (70)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77, on right: 42 47 48 49 50 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69 70 71 72 74 75 82
methodcall (71)
    on left: 78 79, on right: 46 76
methodargs (72)
    on left: 80 81, on right: 78 81
methodarg (73)
    on left: 82 83, on right: 80 81
arrayType (74)
    on left: 84, on right: 17
externTypes (75)
    on left: 85 86, on right: 6 86
externType (76)
    on left: 87 88, on right: 85 86
ids (77)
    on left: 89 90, on right: 14 15 25 26 90
idtypes (78)
    on left: 91 92, on right: 22 92
idtype (79)
    on left: 93, on right: 91 92
methodType (80)
    on left: 94 95, on right: 6 7 21 22
type (81)
    on left: 96 97, on right: 14 15 16 18 25 26 27 84 88 93 95
constant (82)
    on left: 98 99 100, on right: 18 73
boolConstant (83)
    on left: 101 102, on right: 100


state 0

    0 $accept: . start $end
    1 start: . program
    2 program: . extern_list decafpackage
    3        | . decafpackage
    4 extern_list: . externFunc
    5            | . extern_list externFunc
    6 externFunc: . T_EXTERN T_FUNC T_ID T_LPAREN externTypes T_RPAREN methodType T_SEMICOLON
    7           | . T_EXTERN T_FUNC T_ID T_LPAREN T_RPAREN methodType T_SEMICOLON
    8 decafpackage: . T_PACKAGE T_ID begin_block fieldDecls methodDecls end_block
    9             | . T_PACKAGE T_ID T_LCB T_RCB
   10             | . T_PACKAGE T_ID begin_block fieldDecls end_block
   11             | . T_PACKAGE T_ID begin_block methodDecls end_block

    T_PACKAGE  shift, and go to state 1
    T_EXTERN   shift, and go to state 2

    start         go to state 3
    program       go to state 4
    extern_list   go to state 5
    externFunc    go to state 6
    decafpackage  go to state 7


state 1

    8 decafpackage: T_PACKAGE . T_ID begin_block fieldDecls methodDecls end_block
    9             | T_PACKAGE . T_ID T_LCB T_RCB
   10             | T_PACKAGE . T_ID begin_block fieldDecls end_block
   11             | T_PACKAGE . T_ID begin_block methodDecls end_block

    T_ID  shift, and go to state 8


state 2

    6 externFunc: T_EXTERN . T_FUNC T_ID T_LPAREN externTypes T_RPAREN methodType T_SEMICOLON
    7           | T_EXTERN . T_FUNC T_ID T_LPAREN T_RPAREN methodType T_SEMICOLON

    T_FUNC  shift, and go to state 9


state 3

    0 $accept: start . $end

    $end  shift, and go to state 10


state 4

    1 start: program .

    $default  reduce using rule 1 (start)


state 5

    2 program: extern_list . decafpackage
    5 extern_list: extern_list . externFunc
    6 externFunc: . T_EXTERN T_FUNC T_ID T_LPAREN externTypes T_RPAREN methodType T_SEMICOLON
    7           | . T_EXTERN T_FUNC T_ID T_LPAREN T_RPAREN methodType T_SEMICOLON
    8 decafpackage: . T_PACKAGE T_ID begin_block fieldDecls methodDecls end_block
    9             | . T_PACKAGE T_ID T_LCB T_RCB
   10             | . T_PACKAGE T_ID begin_block fieldDecls end_block
   11             | . T_PACKAGE T_ID begin_block methodDecls end_block

    T_PACKAGE  shift, and go to state 1
    T_EXTERN   shift, and go to state 2

    externFunc    go to state 11
    decafpackage  go to state 12


state 6

    4 extern_list: externFunc .

    $default  reduce using rule 4 (extern_list)


state 7

    3 program: decafpackage .

    $default  reduce using rule 3 (program)


state 8

    8 decafpackage: T_PACKAGE T_ID . begin_block fieldDecls methodDecls end_block
    9             | T_PACKAGE T_ID . T_LCB T_RCB
   10             | T_PACKAGE T_ID . begin_block fieldDecls end_block
   11             | T_PACKAGE T_ID . begin_block methodDecls end_block
   36 begin_block: . T_LCB

    T_LCB  shift, and go to state 13

    begin_block  go to state 14


state 9

    6 externFunc: T_EXTERN T_FUNC . T_ID T_LPAREN externTypes T_RPAREN methodType T_SEMICOLON
    7           | T_EXTERN T_FUNC . T_ID T_LPAREN T_RPAREN methodType T_SEMICOLON

    T_ID  shift, and go to state 15


state 10

    0 $accept: start $end .

    $default  accept


state 11

    5 extern_list: extern_list externFunc .

    $default  reduce using rule 5 (extern_list)


state 12

    2 program: extern_list decafpackage .

    $default  reduce using rule 2 (program)


state 13

    9 decafpackage: T_PACKAGE T_ID T_LCB . T_RCB
   36 begin_block: T_LCB .  [T_FUNC, T_VAR]

    T_RCB  shift, and go to state 16

    $default  reduce using rule 36 (begin_block)


state 14

    8 decafpackage: T_PACKAGE T_ID begin_block . fieldDecls methodDecls end_block
   10             | T_PACKAGE T_ID begin_block . fieldDecls end_block
   11             | T_PACKAGE T_ID begin_block . methodDecls end_block
   12 fieldDecls: . fieldDecl
   13           | . fieldDecls fieldDecl
   14           | . T_VAR ids type T_SEMICOLON
   15           | . fieldDecls T_VAR ids type T_SEMICOLON
   16 fieldDecl: . T_VAR T_ID type T_SEMICOLON
   17          | . T_VAR T_ID arrayType T_SEMICOLON
   18          | . T_VAR T_ID type T_ASSIGN constant T_SEMICOLON
   19 methodDecls: . methodDecl
   20            | . methodDecls methodDecl
   21 methodDecl: . T_FUNC T_ID T_LPAREN T_RPAREN methodType mblock
   22           | . T_FUNC T_ID T_LPAREN idtypes T_RPAREN methodType mblock

    T_FUNC  shift, and go to state 17
    T_VAR   shift, and go to state 18

    fieldDecls   go to state 19
    fieldDecl    go to state 20
    methodDecls  go to state 21
    methodDecl   go to state 22


state 15

    6 externFunc: T_EXTERN T_FUNC T_ID . T_LPAREN externTypes T_RPAREN methodType T_SEMICOLON
    7           | T_EXTERN T_FUNC T_ID . T_LPAREN T_RPAREN methodType T_SEMICOLON

    T_LPAREN  shift, and go to state 23


state 16

    9 decafpackage: T_PACKAGE T_ID T_LCB T_RCB .

    $default  reduce using rule 9 (decafpackage)


state 17

   21 methodDecl: T_FUNC . T_ID T_LPAREN T_RPAREN methodType mblock
   22           | T_FUNC . T_ID T_LPAREN idtypes T_RPAREN methodType mblock

    T_ID  shift, and go to state 24


state 18

   14 fieldDecls: T_VAR . ids type T_SEMICOLON
   16 fieldDecl: T_VAR . T_ID type T_SEMICOLON
   17          | T_VAR . T_ID arrayType T_SEMICOLON
   18          | T_VAR . T_ID type T_ASSIGN constant T_SEMICOLON
   89 ids: . T_ID
   90    | . ids T_COMMA T_ID

    T_ID  shift, and go to state 25

    ids  go to state 26


state 19

    8 decafpackage: T_PACKAGE T_ID begin_block fieldDecls . methodDecls end_block
   10             | T_PACKAGE T_ID begin_block fieldDecls . end_block
   13 fieldDecls: fieldDecls . fieldDecl
   15           | fieldDecls . T_VAR ids type T_SEMICOLON
   16 fieldDecl: . T_VAR T_ID type T_SEMICOLON
   17          | . T_VAR T_ID arrayType T_SEMICOLON
   18          | . T_VAR T_ID type T_ASSIGN constant T_SEMICOLON
   19 methodDecls: . methodDecl
   20            | . methodDecls methodDecl
   21 methodDecl: . T_FUNC T_ID T_LPAREN T_RPAREN methodType mblock
   22           | . T_FUNC T_ID T_LPAREN idtypes T_RPAREN methodType mblock
   37 end_block: . T_RCB

    T_FUNC  shift, and go to state 17
    T_VAR   shift, and go to state 27
    T_RCB   shift, and go to state 28

    fieldDecl    go to state 29
    methodDecls  go to state 30
    methodDecl   go to state 22
    end_block    go to state 31


state 20

   12 fieldDecls: fieldDecl .

    $default  reduce using rule 12 (fieldDecls)


state 21

   11 decafpackage: T_PACKAGE T_ID begin_block methodDecls . end_block
   20 methodDecls: methodDecls . methodDecl
   21 methodDecl: . T_FUNC T_ID T_LPAREN T_RPAREN methodType mblock
   22           | . T_FUNC T_ID T_LPAREN idtypes T_RPAREN methodType mblock
   37 end_block: . T_RCB

    T_FUNC  shift, and go to state 17
    T_RCB   shift, and go to state 28

    methodDecl  go to state 32
    end_block   go to state 33


state 22

   19 methodDecls: methodDecl .

    $default  reduce using rule 19 (methodDecls)


state 23

    6 externFunc: T_EXTERN T_FUNC T_ID T_LPAREN . externTypes T_RPAREN methodType T_SEMICOLON
    7           | T_EXTERN T_FUNC T_ID T_LPAREN . T_RPAREN methodType T_SEMICOLON
   85 externTypes: . externType
   86            | . externTypes T_COMMA externType
   87 externType: . T_STRINGTYPE
   88           | . type
   96 type: . T_INTTYPE
   97     | . T_BOOLTYPE

    T_RPAREN      shift, and go to state 34
    T_BOOLTYPE    shift, and go to state 35
    T_INTTYPE     shift, and go to state 36
    T_STRINGTYPE  shift, and go to state 37

    externTypes  go to state 38
    externType   go to state 39
    type         go to state 40


state 24

   21 methodDecl: T_FUNC T_ID . T_LPAREN T_RPAREN methodType mblock
   22           | T_FUNC T_ID . T_LPAREN idtypes T_RPAREN methodType mblock

    T_LPAREN  shift, and go to state 41


state 25
